# wingedcap-rust-client

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Makefile.toml  tailwind.css
.github/workflows/: bundle.yml
icons/: icon.icns
src/: app.rs  main.rs
src/components/: create_receiver_dialog_component.rs  create_secret_form_dialog_component.rs  key_details_component.rs  mod.rs  receiver_secret_component.rs  reveal_secret_dialog_component.rs  secret_component.rs  sender_details_dialog_component.rs  sender_secret_component.rs  share_receiver_data_dialog_component.rs
src/constants/: app_name_constant.rs  mod.rs
src/manager/: mod.rs
src/manager/constants/: hub_host_constant.rs  hub_pk_constant.rs  mod.rs
src/manager/utils/: get_server_util.rs  mod.rs
src/storage/constants/: mod.rs  receiver_storage_name_prefix_constant.rs  sender_storage_name_prefix_constant.rs
src/storage/utils/: get_receivers_util.rs  get_senders_util.rs  mod.rs  store_receiver_util.rs  store_sender_util.rs
src/types/: attributes_type.rs  get_class.rs  mod.rs  time_type.rs  time_unit_type.rs
src/ui/: mod.rs
src/ui/button/: props.rs  style.rs
src/ui/card/: props.rs  style.rs
src/ui/dropdown/: props.rs  style.rs
src/ui/hovercard/: props.rs  style.rs
src/ui/input/: props.rs  style.rs
src/ui/input_animated_label/: props.rs  style.rs
src/ui/modal/: props.rs  style.rs
src/ui/scrollable/: props.rs  style.rs
src/ui/select/: props.rs  style.rs
src/ui/separator/: props.rs  style.rs
src/utils/: mod.rs
src/views/: mod.rs  receiver_view.rs  sender_view.rs
(+18 files in other folders)
