[package]
name = "wingedcap-client"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wingedcap = "0.1.3"

cross-storage = "0.2.0"
cross-clipboard = "0.2.0"

dioxus = { version = "0.7.0", features = [] }

dioxus-logger = "0.5.1"
tracing = "0.1.41"
tracing-wasm = "0.2.1"

dotenv = { version = "0.15.0", features = ["cli"] }

strum = { version = "0.27.1", default-features = false, features = ["derive"] }
strum_macros = "0.27.2"

rand = "0.9.2"
getrandom = {version = "0.3.3", features = ["wasm_js"]}

reqwest = { version = "0.12.23", features = ["json"] }
futures-util = "0.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"

tailwind_fuse = { version = "0.3.2", features = ["variant"] }

lucide-dioxus = { version = "2.43.0", features = ["all-icons"] }

dioxus-tw-components = "0.2.0-rc.1"
dioxus-tw-components-macro = "0.1.0"

chrono = "0.4.39"


#[target.'cfg(target_family = "wasm")'.dependencies]
futures = "0.3.31"


[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"



